// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#cogs/cogs/number/field <Field /> With additional props Default value is a number renders 1`] = `
<input
  className="MOCK CLASSNAME"
  defaultValue="0"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  readOnly={true}
  required={true}
  type="number"
/>
`;

exports[`#cogs/cogs/number/field <Field /> With additional props Default value is a string renders 1`] = `
<input
  className="MOCK CLASSNAME"
  defaultValue="0"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  readOnly={true}
  required={true}
  type="number"
/>
`;

exports[`#cogs/cogs/number/field <Field /> With additional props Value is a number renders 1`] = `
<input
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  readOnly={true}
  required={true}
  type="number"
  value="MOCK VALUE"
/>
`;

exports[`#cogs/cogs/number/field <Field /> With additional props Value is a string renders 1`] = `
<input
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  readOnly={true}
  required={true}
  type="number"
  value="MOCK VALUE"
/>
`;

exports[`#cogs/cogs/number/field <Field /> With required props renders 1`] = `
<input
  className="MOCK CLASSNAME"
  disabled={false}
  name="MOCK NAME"
  readOnly={false}
  required={false}
  type="number"
  value="MOCK VALUE"
/>
`;
